<resources>
    <string name="app_name">3D Recorder</string>
    <string name="plane_other">Other</string>
    <string name="plane_floor">Floor</string>
    <string name="plane_wall">Wall</string>
    <string name="plane_table">Table</string>
    <string name="plane_seat">Seat</string>
    <string name="plane_ceiling">Ceiling</string>
    <string name="plane_door">Door</string>
    <string name="plane_window">Window</string>
    <string name="plane_bed">Bed</string>
    <string name="arengine_cancel" priority="translator">CANCEL</string>
    <string name="arengine_install" priority="translator">INSTALL</string>
    <string name="arengine_install_app" priority="translator">Install the latest version of HUAWEI AR Engine to continue.</string>
    <string name="worldSceneMobileTips">Please move the mobile phone slowly to find the plane</string>

    <!-- Prefs -->
    <string name="pref_depth">pref_depth</string>
    <string name="pref_depth_repeat">pref_depth_repeat</string>
    <string name="pref_rgbVga">pref_rgbVga</string>
    <string name="pref_rgbvga_repeat">pref_rgbvga_repeat</string>
    <string name="pref_rgbPreview">pref_rgbPreview</string>
    <string name="pref_rgbPreview_repeat">pref_rgbPreview_repeat</string>
    <string name="pref_rbgPreview_resolution">pref_rbgPreview_resolution</string>
    <string name="pref_rbgPreview_resolution_default_value">1440x1080</string>
    <string name="pref_autofocus">pref_autofocus</string>
    <string name="pref_repeat_default_value">30</string>
    <!-- dev prefs -->
    <string name="pref_webviewUrlCustomized_key">pref_webviewUrlCustomized</string>
    <string name="pref_webviewUrl_key">pref_webviewurl3</string>
    <string name="pref_webviewUrl_value">https://remy-mellet.com/image-processing-js</string>

</resources>
